// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arguments shows added arguments 1`] = `
"type Query { 
  
  # ✔️ Notice ✔️
  hello(name: String): String

}

interface Node { 
  
  # ✔️ Notice ✔️
  id(id: ID!): String

}

"
`;

exports[`arguments shows removed arguments 1`] = `
"type Query { 
  
  # ⚡ Warning ⚡
  hello: String

}

interface Node { 
  
  # ⚡ Warning ⚡
  id: String

}


"
`;

exports[`deprecation changes deprecation additions 1`] = `
"type Query { 
  
  # ⚡ Warning ⚡
  deprecated: String @deprecated

  # ✔️ Notice ✔️
  deprecatedWithReason: String @deprecated(reason: \\"Use field testcase instead\\")

}

enum SoLong { 
  
  # ⚡ Warning ⚡
  TWO @deprecated

  # ✔️ Notice ✔️
  ONE @deprecated(reason: \\"One is the loneliest number\\")

}

"
`;

exports[`deprecation changes deprecation removals 1`] = `
"type Query { 
  
  # ✔️ Notice ✔️
  deprecated: String

}

enum SoLong { 
  
  # ✔️ Notice ✔️
  TWO

}

"
`;

exports[`fields shows notice for additions 1`] = `
"input AddedInput { 
  
  # ⚡ Warning ⚡
  firstName: String!

  # ✔️ Notice ✔️
  lastName: String

}

type User { 
  
  # ✔️ Notice ✔️
  firstName: String!

}

enum AddedEnum { 
  
  # ✔️ Notice ✔️
  TWO

}

interface AddedInterface { 
  
  # ✔️ Notice ✔️
  firstName(arg: String): String

}

"
`;

exports[`fields shows warning for removals 1`] = `
"type User { 
  
  # ⚡ Warning ⚡
  firstName: String!

}

enum AddedEnum { 
  
  # ⚡ Warning ⚡
  TWO

}

input AddedInput { 
  
  # ⚡ Warning ⚡
  firstName: String!
  lastName: String

}

interface AddedInterface { 
  
  # ⚡ Warning ⚡
  firstName(arg: String): String

}

"
`;

exports[`integration reports changes for a complex scenario 1`] = `
"type Query { 
  
  # ⚡ Warning ⚡
  hello: String!

  # ✔️ Notice ✔️
  me: User

}

type User { 
  
  # ✔️ Notice ✔️
  id: ID!
  firstName: String

}

"
`;

exports[`interfaces reports adding multiple interface implementations 1`] = `
"type User implements Node & Person { }

"
`;

exports[`interfaces reports additiong of interface to object 1`] = `
"type User implements Node { }

"
`;

exports[`interfaces reports removal multiple of interface implementations 1`] = `
"type User implements Node { }

"
`;

exports[`interfaces reports removal of interface implementations 1`] = `
"type User { }

"
`;

exports[`kind changes arg changed kind 1`] = `
"type Query { 
  
  # ⚡ Warning ⚡
  hello(id: String): String
  defaultVal(id: String = \\"2\\"): String

}


"
`;

exports[`kind changes field changed kind 1`] = `
"type Query { 
  
  # ⚡ Warning ⚡
  hello: ID!

}

input Hello { 
  
  # ⚡ Warning ⚡
  hello: String!

}

"
`;

exports[`kind changes type changed kind 1`] = `
"type ChangeType { }

"
`;

exports[`types shows added types 1`] = `
"type AddedType { 
  
  # ✔️ Notice ✔️
  id: ID!

}

enum AddedEnum { 
  
  # ✔️ Notice ✔️
  ONE

}

input AddedInput { 
  
  # ✔️ Notice ✔️
  id: ID!

}

scalar AddedScalar

interface AddedInterface { 
  
  # ✔️ Notice ✔️
  id: ID!

}

union AddedUnion = User

"
`;

exports[`types shows removed types 1`] = `
"type RemovedType { }

enum RemovedEnum { }

input RemovedInput { }

scalar RemovedScalar

interface RemovedInterface { }

union RemovedUnion = User

"
`;

exports[`unions type added from union 1`] = `
"union Client = User | Person

"
`;

exports[`unions type removed from union 1`] = `
"union Client = User

"
`;
